# hammy

./: .dockerignore  .gitignore  ASSETS  README.md
.github/workflows/: client.yml  pages.yml  server.yml
client/: AudioEmitter.gd  AudioEmitter.tscn  Debug.gd  EventBus.gd  Line2D.gd  Main.gd  Main.tscn  MessageHandler.gd  MessageHandler.tscn  Radio.gd  Radio.tscn  SocketIOClient.gd  default_theme.tres  export_presets.cfg  icon.svg.import  project.godot
client/assets/: Hammy logo.png.import
client/assets/fonts/: lazy_dog.ttf.import
client/assets/raw/: cursor.svg.import  ranger_radio.svg.import  speech.svg.import
client/assets/sounds/beeps/: radio_beep_single_short.mp3.import  radio_beeps_button_positive.mp3.import  radio_two_way_beep_on.mp3.import  radio_two_way_beep_single.mp3.import
client/assets/sounds/buttons/: radio_button_single_press_001.mp3.import  (+14 more)
client/assets/sprites/: brown-tape.png.import  channel-select_channel-select.png.import  power-indicator-light.png.import  power-indicator.png.import  power-switch.png.import  radio.png.import  speech.png.import  white-tape.png.import
client/radios/components/: ChannelSelectSpinner.gd  ChannelSelectSpinner.tscn  OnOffSwitch.gd  OnOffSwitch.tscn  PowerIndicator.gd  PowerIndicator.tscn  SpeechBubble.gd  SpeechBubble.tscn  UserName.gd  UserName.tscn
server/: Dockerfile  README.md  bot.py  fly.toml  pyproject.toml
server/hammy-server/: __init__.py
server/hammyws/: __init__.py  __main__.py
site/: astro.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.mjs
site/src/pages/: index.astro
(+26 files in other folders)
