[tool.poetry]
name = "hammyws"
version = "0.1.0"
description = ""
authors = ["Alex Ward <alxwrd@googlemail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-socketio = "^5.10.0"
uvicorn = "^0.29.0"
gunicorn = "^21.2.0"
fastapi = "^0.110.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
